--- a/forms.html
+++ b/forms.html
@@ -25,6 +25,7 @@
             <forms action="#" method="post">
                 <div>
                     <h1>Formulário de Apadrinnhamento</h1>
+					<p>Ao estares a apadrinhar um Lince estás a ajudar a manter a preservação da espécie e do seu habitat.</p>
                 </div>
                 <div>
                     <label for="nome">Nome:</label>
