--- a/restaurantes.html
+++ b/restaurantes.html
@@ -97,6 +97,13 @@
 						<p>4.4 ★ (249 avaliações)</p>
 					</figcaption>
 				</figure>
+				<figure  class="one-restaurante" style="visibility:hidden">
+					<img src="Imagens/liriodogeres.jpg" alt="Imagem do Restaurante Lírio do Gerês" >
+					<figcaption class="info-restaurante">
+						<p>Restaurante Lírio do Gerês</p>
+						<p>4.4 ★ (249 avaliações)</p>
+					</figcaption>
+				</figure>
 			</div>
 		</main>
 		<script src="javascript/restaurantes.js">
