--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header class="header">
-            <a href="projeto.html" class="logo">Gerês</a>
+            <a href="index.html" class="logo">Gerês</a>
             <input class="side-menu" type="checkbox" id="side-menu">
             <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
             <nav class="nav">
