--- a/alojamento.html
+++ b/alojamento.html
@@ -24,7 +24,7 @@
 		<main>
 			<h1 class="titulo">Alojamento</h1>
 			<div class="center">
-				<input type="text" id="search-bar" class="search-bar" placeholder="Porcura por um alojamento" onkeyup="searchBar()">
+				<input type="text" id="search-bar" class="search-bar" placeholder="Procura por um alojamento" onkeyup="searchBar()">
 			</div>
 			<div class="all-alojamento">
 				<figure class="one-alojamento">
