--- a/animais.html
+++ b/animais.html
@@ -23,7 +23,7 @@
         </header>
         <div class="animais">
             <h1>Os animais do Gerês</h1>
-            <p>Como sabemos o Gerês tem uma vasta fauna e flora sendo, por isso, uma grande atração para muitos turistas. Aqui encontram-se os mais conhecidos.</p>
+            <p>Como sabemos o Gerês tem uma vasta fauna e flora, sendo por isso, uma grande atração para muitos turistas. Aqui encontram-se os mais conhecidos.</p>
             <div class="flex">
                 <div>
                     <h3>Lobo-Ibérico</h3>
