--- a/forms.html
+++ b/forms.html
@@ -25,7 +25,7 @@
             <forms action="#" method="post">
                 <div>
                     <h1>Formulário de Apadrinnhamento</h1>
-					<p>Ao estares a apadrinhar um Lince estás a ajudar a manter a preservação da espécie e do seu habitat.</p>
+					<p>Ao apadrinhares um Lince estás a preservar a espécie e o seu habitat.</p>
                 </div>
                 <div>
                     <label for="nome">Nome:</label>
@@ -36,7 +36,7 @@
                     <input id="email" name="email" type="email">
                 </div>
                 <div>
-                    <label for="numero">Número Cotribuinte:</label>
+                    <label for="numero">Número Contribuinte:</label>
                     <input id="numero" name="numero" type="number">
                 </div>
                 <div>
@@ -62,7 +62,7 @@
                 <div class="input">
                     <input type="submit" value="Enviar">
                 </div>
-                <p>*O IBAN para pagamento e todas informações serão enviadas para este email</p>
+                <p>*O IBAN para pagamento e todas as informações serão enviadas para este email</p>
             </forms>
         </section>
         <footer class="redes">
