--- a/geres.html
+++ b/geres.html
@@ -24,7 +24,7 @@
         <div class="geres">
             <h1>Gerês</h1>
             <div class="geres2">
-                <p><span class="firstletter">U</span>m local que hoje em dia atrai muitos turistas pela sua vasta Fauna e Flora, que permite proporcionar momentos de paz e harmonia, através de vastos percursos e de paisagens lindíssimas. Além da Fauna e Flora, o Gerês conta com umas Termas, Termas essas que há muitos anos fizeram aumentar o interesse nas pessoas no Gerês quando se soube das qualidades terapêuticas das água. Também não nos podemos esquecer da ótima gastronimia, característica de Portugal.
+                <p><span class="firstletter">U</span>m local que hoje em dia atrai muitos turistas pela sua vasta Fauna e Flora, que proporciona momentos de paz e harmonia, através de vastos percursos e paisagens lindíssimas. Além da Fauna e Flora, o Gerês conta com umas Termas, Termas essas que, há muitos anos fizeram aumentar o interesse das pessoas no Gerês quando se soube das qualidades terapêuticas das água. Também não nos podemos esquecer da ótima gastronomia, característica de Portugal.
                 </p>
             </div>
         </div>
