--- a/percursos.html
+++ b/percursos.html
@@ -23,7 +23,7 @@
         </header>
         <div class="percursos">
             <h1>Percursos sugeridos</h1>
-            <p>Para quem gosta de dar uma caminhadas e estar com a natureza em seu redor, o Gerês tem uma vasta fauna e flora que podem ser vistos em diversos percursos existentes. Aqui temos três opções diferentes, desde um percurso com 3km até um com 17km.</p>
+            <p>Para quem gosta de fazer umas caminhadas e estar com a natureza ao seu redor, o Gerês tem uma vasta fauna e flora, que podem ser vistos em diversos percursos existentes. Aqui sugerimos três opções diferentes, desde um percurso com 3km até um com 17km.</p>
 
             <h3>Trilho Castrejo – Castro Laboreiro</h3>
             <p>Distância: 17km
