--- a/pontos.html
+++ b/pontos.html
@@ -23,9 +23,9 @@
         </header>
         <div class="pontos">
             <h1>Paisagens</h1>
-            <p>Gerês é caracterizado por ter lindas paisagens, ótimo para quem gosta de andar com máquina fotográfica na mão. Aqui deixamos quatro boas opções para visitar no Gerês.</p>
+            <p>O Gerês é caracterizado por ter lindas paisagens, ótimo para quem gosta de andar com máquina fotográfica na mão. Aqui deixamos quatro boas opções para visitar no Gerês.</p>
             <h3>Miradouro da Pedra Bela</h3>
-            <p>Está localizado em Terras de Bouro, a mais de 800 metros de altitude. A partir do Miradouro é possível avistar a Albufeira da Caniçada, os vilarejos e os rios contornando a serra.É acessível de carro.
+            <p>Está localizado em Terras de Bouro, a mais de 800 metros de altitude. A partir do Miradouro é possível avistar a Albufeira da Caniçada, os vilarejos e os rios contornando a serra. É acessível de carro.
             </p>
             <img class="foto" src="Imagens/miradouro.jpg" alt="Foto do Miradouro da Pedra Bela" onclick="ampliar(this)">
 
@@ -34,11 +34,11 @@
             <img class="foto" src="Imagens/cascataarado.jpg" alt="Foto da Cascatada do Arado" onclick="ampliar(this)">
 
             <h3>Cascata Tahiti</h3>
-            <p>Uma ótima opção para ser visitada no verão pois esta cascata forma várias piscinas naturais ajudando a refrescar no verão. É possivel chegar até ao início da cascata de carro.</p>
+            <p>Uma ótima opção para ser visitada no verão, pois esta cascata forma várias piscinas naturais ajudando a refrescar no verão. É possível chegar até ao início da cascata de carro.</p>
             <img class="foto" src="Imagens/cascatatahiti.jpg" alt="Foto da Cascata Tahiti" onclick="ampliar(this)">
 
             <h3>Ponte da Misarela</h3>
-            <p>Localiza-se sobre o rio Rabagão, na freguesia de Ferral, concelho de Montalegre. É conhecida popularmente como a Ponte do Diabo onde em lenda dizem que foi construída pelo próprio Diabo. O que é certo, é que foi palco de lutas e combates entre os Portugueses e as tropas Francesas de Soult.</p>
+            <p>Localiza-se sobre o rio Rabagão, na freguesia de Ferral, concelho de Montalegre. É conhecida popularmente como a Ponte do Diabo onde, diz a lenda que, foi construída pelo próprio Diabo. O que é certo, é que foi palco de lutas e combates entre os Portugueses e as tropas Francesas de Soult.</p>
             <img class="foto" src="Imagens/pontemisarela.jpg" alt="Foto da ponte  da misarela" onclick="ampliar(this)">
         </div>
 		<div class="modal" id="myModal">
