--- a/restaurantes.html
+++ b/restaurantes.html
@@ -24,7 +24,7 @@
 		<main>
 			<h1 class="titulo">Restaurantes</h1>
 			<div class="center">
-				<input type="text" id="search-bar" class="search-bar" placeholder="Porcura por um restaurante" onkeyup="searchBar()">
+				<input type="text" id="search-bar" class="search-bar" placeholder="Procura por um restaurante" onkeyup="searchBar()">
 			</div>
 			<div class="all-restaurantes">
 				<figure class="one-restaurante">
