--- a/sobre.html
+++ b/sobre.html
@@ -24,7 +24,7 @@
         <div class="sobre">
             <h1>Sobre</h1>
             <div class="sobre2">
-                <p><span class="firstletter">E</span>ste site é realizado no âmbito da Disciplina de Introdução à Programação Web. O site é realizado no âmbito académico sem qualquer intuito comercial.
+                <p><span class="firstletter">E</span>ste site é realizado no âmbito da Disciplina de Introdução à Programação Web, com âmbito académico sem qualquer intuito comercial.
                 </p>
 				</br>
 				<h3>Desenvolvedores:</h3>
