--- a/pontos.html
+++ b/pontos.html
@@ -34,7 +34,7 @@
             <img class="foto" src="Imagens/cascataarado.jpg" alt="Foto da Cascatada do Arado" onclick="ampliar(this)">
 
             <h3>Cascata Tahiti</h3>
-            <p>Uma ótima opção para ser visitada no verão, pois esta cascata forma várias piscinas naturais ajudando a refrescar no verão. É possível chegar até ao início da cascata de carro.</p>
+            <p>Uma ótima opção para visitar no verão, pois esta cascata forma várias piscinas naturais ajudando-nos a refrescar no verão. É possível chegar até ao início da cascata de carro.</p>
             <img class="foto" src="Imagens/cascatatahiti.jpg" alt="Foto da Cascata Tahiti" onclick="ampliar(this)">
 
             <h3>Ponte da Misarela</h3>
